--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,8 +1,11 @@
 <div class="container">
+<!--  <div [ngStyle]="msgStyle" [hidden]="hideMsg">
+    {{message}}
+  </div>-->
   <h1>Book Form</h1>
-  <button (click)="addAuthor()">Add Author</button>
+  <button (click)="addAuthor()" class="btn btn-primary">Add Author</button>
   <form [formGroup]="bookForm" (ngSubmit)="onSubmit()">
-    <div class="form-group">
+    <div class="mb-3">
       <label for="bookNumber">Number:</label>
       <input type="text" class="form-control" id="bookNumber"  formControlName="bookNumber" required>
       <div [hidden]="bookNumber.pristine || bookNumber.valid"
@@ -10,15 +13,15 @@
         Book number must be 4 digits long starting with a number different from 0.
       </div>
     </div>
-    <div class="form-group">
+    <div class="mb-3">
       <label for="category">Category:</label>
-      <input type="text" class="form-control" id="category"  formControlName="category">
+      <input type="text" class="form-control" id="category" formControlName="category">
       <div [hidden]="category.pristine || category.valid"
            class="alert alert-danger">
         Category is required to be <b>Kids</b>, <b>Tech</b> or <b>Cook</b>
       </div>
     </div>
-    <div class="form-group">
+    <div class="mb-3">
       <label for="title">Title:</label>
       <input type="text" class="form-control" id="title" required formControlName="title">
       <div [hidden]="title.pristine || title.valid"
@@ -26,36 +29,44 @@
         Title is required.
       </div>
     </div>
-    <div class="form-group">
+    <div class="mb-3">
       <label for="cost">Cost:</label>
-      <input type="text" class="form-control" id="cost" required  pattern="\d+(.\d{1,2})?" formControlName="cost">
+      <input type="text" class="form-control" id="cost" required pattern="\d+(.\d{1,2})?" formControlName="cost">
       <div [hidden]="cost.pristine || cost.valid"
            class="alert alert-danger">
         Cost should be a number with two optional decimals
       </div>
     </div>
-    <div class="form-group">
-      <div formArrayName="authors">
-        <div *ngFor="let _ of authors.controls; let i=index">
-          <ng-container [formGroupName]="i">
-            <label>
-              Author First Name:
-              <input formControlName="firstName" type="text">
-            </label>
-            <label>
-              Author Last Name:
-              <input formControlName="lastName" type="text">
-            </label>
-            <button class="btn btn-dark" (click)="removeAuthor(i)">X</button>
-          </ng-container>
-        </div>
+    <div formArrayName="authors">
+      <div *ngFor="let _ of authors.controls; let i=index">
+        <ng-container [formGroupName]="i">
+          <div class="row g-lg-5 align-items-center">
+            <div class="col-auto">
+              <label for="authName" class="col-form-label">Author First Name:</label>
+            </div>
+            <div class="col-auto">
+              <input id="authName" class="form-control" formControlName="firstName" type="text">
+            </div>
+          </div>
+          <div class="row g-lg-5 align-items-center">
+            <div class="col-auto">
+              <label for="authLName" class="col-form-label">Author Last Name:</label>
+            </div>
+            <div class="col-auto">
+              <input id="authLName" class="form-control" formControlName="lastName" type="text">
+            </div>
+            <div class="col-auto">
+              <button class="btn btn-dark form-control" (click)="removeAuthor(i)">X</button>
+            </div>
+          </div>
+        </ng-container>
       </div>
     </div>
-    <div class="form-group">
+    <div class="mb-3">
       <label for="year">Year:</label>
       <input type="text" class="form-control" id="year" formControlName="year">
     </div>
-    <div class="form-group">
+    <div class="mb-3">
       <label for="description">Description:</label>
       <textarea cols="40" class="form-control" id="description" formControlName="description"></textarea>
     </div>
