--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,13 +11,13 @@
 
 <div class="container-fluid" >
   <div class="row">
-    <div class="col">
+    <div class="col-3">
       <img src="../assets/gobooks.jpg" height="150" width="175"/>
     </div>
     <div class="col-6">
       <router-outlet></router-outlet>
     </div>
-    <div class="col">
+    <div class="col-3">
       <img src="../assets/1books2-med.jpg" height="150" width="175"/>
     </div>
   </div>
